增加获取用户profile接口，实现授权中间件，增强swagger
