# api/user_profile/update_profile.handler.go
@@ -1,0 +1,7 @@
+package user_profile
+
+import "github.com/gin-gonic/gin"
+
+func (e *EndpointsImpl) updateProfile(context *gin.Context) {
+
+}
